# m8-kbd

./: Cargo.toml  Embed.toml  Makefile  README.md  memory.x
.cargo/: config.toml
src/: keymap.rs  main.rs
stl/: bottom-plate.stl  bracket.stl  top-plate.stl
