[package]
name = "m8-kbd"
edition = "2021"
authors = ["Vadim Kolontsov <vadim@kolontsov.com>"]
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.1"
# upgrade embedded-hal to 1.0 after release
embedded-hal = "0.2"

rp-pico = "0.8"
rp2040-monotonic = "1.3"
rp2040-hal = { version = "0.9", features = ["rt", "rp2040-e5"] }

# latest usb-device is 0.3, but 0.2 is required by current keyberon and rp-pico
usb-device = "0.2"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "285f01f" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true